--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,14 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+                <groupId>org.junit</groupId>
+                <artifactId>junit5-engine</artifactId>
+                <version>5.0.0-ALPHA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
